# firefly

./: .gitignore  .gitmodules  Architecture.md  Cargo.toml  LICENSE.md  Language.md  README.md  log  profile.json  resolution.txt  todo.md
doc/: Import.md  Visibility.md
docs/: StandardLibrary.md
docs/features/: ArgumentLabels.md  ControlFlow.md  Errors.md  Globals.md  Operators.md  String.md  Structs.md
lib/blink-ast/: Cargo.toml
lib/blink-ast/src/: func.rs  lib.rs  stmt.rs  ty.rs  value.rs
lib/blink-parser/: Cargo.toml
lib/blink-parser/src/: lexer.rs  lib.rs  parser.lalrpop
lib/blink-span/: Cargo.toml
lib/blink-span/src/: loader.rs  source_map.rs  span.rs
lib/core/: Integer.fly.xcb  Iterator.fly  List.fly
lib/firefly-ast/: Cargo.toml
lib/firefly-ast-lower/: Cargo.toml
lib/firefly-ast-lower/src/: labels.rs  lib.rs  link.rs  resolve.rs  resolve_condition.rs  resolver.rs  stmt.rs  ty.rs  util.rs  value.rs
lib/firefly-ast-lower/src/errors/: decl.rs  mod.rs  module.rs  string.rs  symbol.rs  ty.rs  value.rs
lib/firefly-ast-lower/src/items/: func.rs  global.rs  import.rs  mod.rs  struct_def.rs
lib/firefly-ast/src/: func.rs  import.rs  item.rs  lib.rs  module.rs  operator.rs  stmt.rs  struct_def.rs  ty.rs  value.rs
lib/firefly-driver/: Cargo.toml
lib/firefly-driver/src/: args.rs  context.rs  lib.rs  pass.rs  pipeline.rs
lib/firefly-driver/src/pass/: hir_lower.rs  lower.rs  parse.rs  tycheck.rs  vir_lower.rs
lib/firefly-error-messages/: Cargo.toml
lib/firefly-error-messages/src/: lib.rs
lib/firefly-errors/: Cargo.toml
lib/firefly-errors/src/: annotation.rs  diagnostic.rs  emitter.rs  lib.rs
lib/firefly-hir/: Cargo.toml
lib/firefly-hir-lower/: Cargo.toml
lib/firefly-hir-lower/src/: code.rs  lib.rs  ty.rs  value.rs
lib/firefly-hir-lower/src/items/: func.rs  global.rs  mod.rs  struct_def.rs
lib/firefly-hir-lower/src/value/: builtins.rs  conditional.rs  literals.rs  loops.rs  mod.rs
lib/firefly-hir-proto/: Cargo.toml
lib/firefly-hir-proto/src/: entity.rs  lib.rs  property.rs
lib/firefly-hir-proto/src/context/: mod.rs
lib/firefly-hir-proto/src/func/: mod.rs  signature.rs
lib/firefly-hir-proto/src/generics/: parameter.rs  polymorph.rs
lib/firefly-hir-proto/src/items/: mod.rs  struct_def.rs
lib/firefly-hir-proto/src/stmt/: mod.rs
lib/firefly-hir-proto/src/ty/: mod.rs
lib/firefly-hir-proto/src/value/: mod.rs
lib/firefly-hir/src/: component.rs  context.rs  entity.rs  errors.rs  lib.rs  macros.rs  tests.rs  util.rs
lib/firefly-hir/src/context/: display.rs  iter.rs  mod.rs
lib/firefly-hir/src/errors/: import.rs
lib/firefly-hir/src/func/: mod.rs  signature.rs
lib/firefly-hir/src/generics/: mod.rs
lib/firefly-hir/src/items/: mangle.rs  mod.rs
lib/firefly-hir/src/path/: mod.rs
lib/firefly-hir/src/resolve/: collection.rs  import.rs  member_table.rs  mod.rs  namespace.rs  symbol.rs  symbol_table.rs  visible.rs
lib/firefly-hir/src/stmt/: binding.rs  code_block.rs  local.rs  mod.rs
lib/firefly-hir/src/ty/: has_type.rs  mod.rs  resolved.rs
lib/firefly-hir/src/value/: has_value.rs  mod.rs
lib/firefly-interpret/: Cargo.toml  IR.md
lib/firefly-interpret/src/: action.rs  builder.rs  lib.rs  stack_frame.rs  tests.rs  util.rs  value.rs
lib/firefly-interpret/src/engine/: action.rs  mod.rs  stack_frame.rs  value.rs
lib/firefly-interpret/src/ir/: mod.rs  ty.rs
lib/firefly-interpret/src/ir/code/: bb.rs  func.rs  global.rs  local.rs  mod.rs  terminator.rs
lib/firefly-interpret/src/ir/ty/: mod.rs  struct_def.rs
lib/firefly-lang/: Cargo.toml
lib/firefly-lang/src/: lib.rs
lib/firefly-mangle/: Cargo.toml
lib/firefly-mangle/src/: lib.rs  path.rs  sym.rs
lib/firefly-mir/: Cargo.toml
lib/firefly-mir/src/: builder.rs  lib.rs  util.rs
lib/firefly-mir/src/code/: bb.rs  func.rs  global.rs  local.rs  mod.rs  terminator.rs
lib/firefly-mir/src/ty/: mod.rs  struct_def.rs
lib/firefly-mir/src/value/: imm.rs  intrinsics.rs  mod.rs  place.rs
lib/firefly-parser/: Cargo.toml  build.rs
lib/firefly-parser/src/: error.rs  lexer.rs  lib.rs  parser.lalrpop
lib/firefly-resolve-proto/src/: lib.rs  symbol_table.rs
lib/firefly-span/: Cargo.toml
lib/firefly-span/src/: lib.rs  loader.rs  span.rs
lib/firefly-test/: Cargo.toml
lib/firefly-test/src/: ARCHITECTURE.md  main.rs
lib/firefly-test/src/display/: mod.rs
lib/firefly-test/src/test/: mod.rs  run.rs  suite.rs
lib/firefly-test/src/test/directive/: comments.rs  mod.rs
lib/firefly-test/src/test/source/: mod.rs  walker.rs
lib/firefly-ty-check/: Cargo.toml  rules.txt
lib/firefly-ty-check/src/: context.rs  errors.rs  lib.rs  pass.rs
src/: args.rs  main.rs  source.rs
std/: String.fly
tests/: All.bnk  All.fly  Globals.fly  Modules.fly  Structs.fly  Vir.fly
tests/Calling/: Builtins.fly  Func.fly  Init.fly  Instance.fly  NoSelf.fly  Static.fly
tests/Flow/: Break.fly  Factorial.fly  Fibonacci.fly  Shadow.fly  WhileLoop.fly
tests/Import/: Defs.fly  Parse.fly  Uses.fly  UsesAs.fly  UsesList.fly
tests/Infer/: Var.fly
tests/Operators/: Fixes.fly  Methods.fly  OrderOfOperations.fly  Prefix.fly
tests/Overloading/: Functions.fly  FunctionsErrors.fly  Labels.fly  Methods.fly
tests/Parser/: Error.fly
tests/Qol/: Assign.fly  Float.fly  Tuple.fly
tests/String/: Strings.fly
tests/Structs/: AccessFields.fly  Def.fly  Recursive.fly
tests/TyCheck/: Assign.fly  Bindings.fly  Condition.fly  Invoke.fly  Return.fly
tests/Visibility/: DifferentModule.fly  SameModule.fly  SameSubModule.fly  Shared.fly
tests/Vm/: Factorial.fly  IfElse.fly  Mandlebrot.fly
(+4 files in other folders)
