[package]
name = "firefly"
version = "0.1.0"
edition = "2021"

[dependencies]
firefly-span = { path = "lib/firefly-span" }
firefly-parser = { path = "lib/firefly-parser" }
firefly-hir = { path = "lib/firefly-hir" }
firefly-ast = { path = "lib/firefly-ast" }
firefly-ast-lower = { path = "lib/firefly-ast-lower" }
firefly-lang = { path = "lib/firefly-lang" }
firefly-errors = { path = "lib/firefly-errors" }
firefly-driver = { path = "lib/firefly-driver" }
itertools = "0.13.0"

[workspace]
members = [
    "lib/firefly-ast",
    "lib/firefly-ast-lower",
    "lib/firefly-parser",
    "lib/firefly-span",
    "lib/firefly-hir",
    "lib/firefly-lang",
    "lib/firefly-ast-lower",
    "lib/firefly-driver",
    "lib/firefly-lang",
    "lib/firefly-errors",
    "lib/firefly-error-messages",
]
