[package]
name = "blink-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
lalrpop-util = "0.20.2"

blink-ast = { path = "../blink-ast" }
blink-span = { path = "../blink-span" }


[build-dependencies]
lalrpop = "0.20.2"