[package]
name = "firefly-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
firefly-span = { path = "../firefly-span" }
firefly-errors = { path = "../firefly-errors" }
firefly-parser = { path = "../firefly-parser" }
firefly-ast-lower = { path = "../firefly-ast-lower" }
firefly-ast = { path = "../firefly-ast" }
firefly-hir-lower = { path = "../firefly-hir-lower" }
firefly-mir = { path = "../firefly-mir" }
firefly-interpret = { path = "../firefly-interpret" }
clap = { version = "^4.5", features = ["derive"] }