[package]
name = "firefly-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.14.0"
lalrpop-util = "0.20.2"

firefly-ast = { path = "../firefly-ast" }
firefly-span = { path = "../firefly-span" }
firefly-errors = { path = "../firefly-errors" }
firefly-error-messages = { path = "../firefly-error-messages" }
itertools = "0.13.0"


[build-dependencies]
lalrpop = "0.20.2"
